@@ -1,3 +1,15 @@
+2019-09-17  Andy Estes  <aestes@apple.com>
+
+        [Cocoa] Add a WKA extension point
+        https://bugs.webkit.org/show_bug.cgi?id=201801
+        <rdar://problem/55372507>
+
+        Reviewed by Alexey Proskuryakov.
+
+        * Modules/applepay/ApplePayRequestBase.cpp:
+        (WebCore::requiresSupportedNetworks):
+        (WebCore::convertAndValidate):
+
 2019-09-17  Antti Koivisto  <antti@apple.com>
 
         TextIterator should convert tabs to spaces
